tests/ui/kindck/kindck-send-owned.stderr
error[E0277]: `*mut u8` cannot be sent between threads safely
  --> $DIR/kindck-send-owned.rs:12:19
   |
LL |     assert_send::<Box<*mut u8>>();
   |                   ^^^^^^^^^^^^ `*mut u8` cannot be sent between threads safely
   |
   = help: the trait `Send` is not implemented for `*mut u8`
   = note: required for `Unique<*mut u8>` to implement `Send`
note: required because it appears within the type `Box<*mut u8>`
  --> $SRC_DIR/alloc/src/boxed.rs:LL:COL
note: required by a bound in `assert_send`
  --> $DIR/kindck-send-owned.rs:3:18
   |
LL | fn assert_send<T:Send>() { }
   |                  ^^^^ required by this bound in `assert_send`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
